--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A*</title>
-  <script src = "script A-star.js"></script>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A*</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <label for="input">Введите значение</label>
-  <input type="number" id="input" min="2" max="50">
-  <button onclick="createTable()">Сделать таблицу</button>
-  <button onclick="operationLet()">Препятствие</button>
-  <button onclick="operationStart()">Старт</button>
-  <button onclick="operationFinish()">Финиш</button>
-  <button onclick="findAWay()">Найти путь</button>
-  <button onclick="clearTheMatrixOfPaths()">Очистить карту от путей</button>
-  <button value="Refresh Page" onClick="window.location.reload();">Сбросить все</button>
-  <div id="table-container"></div>
+    <div id = "inputs_data">
+        <label for="input">Введите значение</label>
+        <input class="input" type="number" id="input" min="2" max="30">
+        <button id = "map" onclick = "createMap()">Создать карту</button>
+        <button id = "walls">Препятствие</button>
+        <button id = "start">Старт</button>
+        <button id = "finish">Финиш</button>
+        <button onclick="aStar(start, finish)">Найти путь</button>
+    </div>
+    <div id = "table">
+        <canvas class = "canvas" width = "800" height = "800" ></canvas>
+        <script src="script A-star.js"></script>
+    </div>
 </body>
 </html>
