Изменил пару функций, добавил кнопочки

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <button id = "start">Старт</button>
         <button id = "finish">Финиш</button>
         <button onclick="aStar(start, finish)">Найти путь</button>
+        <button onclick="createTableMarkup()">Очистить карту</button>
     </div>
     <div id = "table">
-        <canvas class = "canvas" width = "800" height = "800" ></canvas>
+        <canvas class = "canvas" width = "800" height = "800" >Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="script A-star.js"></script>
     </div>
 </body>
