добавил построение лабиринта

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id = "walls">Препятствие</button>
         <button id = "start">Старт</button>
         <button id = "finish">Финиш</button>
+        <button onclick="generateLabyrinth()">Построить лабиринт</button>
         <button onclick="aStar(start, finish)">Найти путь</button>
         <button onclick="createTableMarkup()">Очистить карту</button>
         <button onclick="clearMapOfPath()">Очистить карту от путей</button>
