убрал пару багов

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </header> -->
     <div id = "inputs_data">
         <label for="input">Введите значение</label>
-        <input id="input" type="number" min="2" max="30">
+        <input id="input" type="number" min="2" max="51">
         <button id = "map" onclick = "createMap()">Создать карту</button>
-        <button id = "walls">Препятствие</button>
+        <button id = "obstacle">Препятствие</button>
         <button id = "start">Старт</button>
         <button id = "finish">Финиш</button>
         <button onclick="generateLabyrinth()">Построить лабиринт</button>
