--- a/Genetic algorithm/index.html
+++ b/Genetic algorithm/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id = "inputs_data">
+        <button onclick="geneticAlgorithm()">Найти путь</button>
         <button onclick="clearMap()">Очистить карту</button>
-        <button onclick="">Найти путь</button>
     </div>
     <div id = "map">
         <canvas id = "canvas" width = "800" height = "800">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
