--- a/A-star/index.html
+++ b/A-star/index.html
@@ -22,6 +22,7 @@
         <button onclick="aStar(start, finish)">Найти путь</button>
         <button onclick="createTableMarkup()">Очистить карту</button>
         <button onclick="clearMapOfPath()">Очистить карту от путей</button>
+        <button onclick="stop()">Stop</button>
         <form id = "choice_of_heuristics">
             <label for="Manhattan">Манхэттенское расстояние</label>
             <input id="Manhattan" type="radio" name="heuristics" value="0" checked>
@@ -32,6 +33,12 @@
     <div id = "table">
         <canvas class = "canvas" width = "800" height = "800" >Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="script A-star.js"></script>
+        <script>
+            const stop = () => {
+                debugger;
+            }
+        </script>
+    
     </div>
 </body>
 </html>
