--- a/Neural network/index.html
+++ b/Neural network/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body onload="createTable()">
-    <button onclick="createMatrix()">Какая цыфра?</button>
+    <button onclick="createMatrix()">Какая цифра?</button>
     <button onclick="clearTable()">Очистить поле</button>
     <div id="table-container"></div>
 </body>
