--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="linksToAlgorithms">
             <a class='navLink'href="./A-star/index.html">А*</a>
             <a class='navLink'href="./Clustering/index.html">Алгоритм кластеризации</a>
-            <a class='navLink'href="./Decision tree/index.html">Генетический алгоритм</a>
+            <a class='navLink'href="./Genetic algorithm/index.html">Генетический алгоритм</a>
             <a class='navLink'href="./A-star/index.html">Муравьиный алгоритм</a>
             <a class='navLink'href="./Genetic algorithm/index.html">Дерево решений</a>
             <a class='navLink'href="./Neural network/index.html">Нейронная сеть</a>
