--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class='navLink'href="./A-star/index.html">А*</a>
             <a class='navLink'href="./Clustering/index.html">Алгоритм кластеризации</a>
             <a class='navLink'href="./Genetic algorithm/index.html">Генетический алгоритм</a>
-            <a class='navLink'href="./A-star/index.html">Муравьиный алгоритм</a>
+            <a class='navLink'href="./Ant algorithm/index.html">Муравьиный алгоритм</a>
             <a class='navLink'href="./Genetic algorithm/index.html">Дерево решений</a>
             <a class='navLink'href="./Neural network/index.html">Нейронная сеть</a>
         </div>
