раскидал по файликам

--- a/A-star/index.html
+++ b/A-star/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A*</title>
     <link rel="stylesheet" href="style.css">
+    <script src="A-star.js"></script>
+    <script src="Functions for canvas.js"></script>  
+    <script src="Generate labyrinth.js"></script>
 </head>
 <body>
-    <!-- <header>
-        <h1>A-star</h1>
-    </header> -->
     <div id = "inputs_data">
         <label for="input">Введите значение</label>
         <input id="input" type="number" min="2" max="51">
@@ -31,7 +31,7 @@
     </div>
     <div id = "table">
         <canvas class = "canvas" width = "800" height = "800" >Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
-        <script src="script A-star.js"></script>    
+        <script src="Map.js"></script>
     </div>
 </body>
 </html>
