--- a/Genetic algorithm/index.html
+++ b/Genetic algorithm/index.html
@@ -15,6 +15,7 @@
     <div id = "map">
         <canvas id = "canvas" width = "800" height = "800">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="Genetic algorithm.js"></script>
+        <script src="functions for canvas.js"></script>
     </div>
 </body>
 </html>
