--- a/Neural network/index.html
+++ b/Neural network/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body onload="createTable()">
-    <button onclick="createMatrix()">Какая цифра?</button>
-    <button onclick="clearTable()">Очистить поле</button>
+    <button id="createMatrix">Какая цифра?</button>
+    <button id="clearTable">Очистить поле</button>
     <div id="table-container"></div>
 </body>
 </html>
