--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <title>Сайтик</title>
 </head>
 <body>
-    <header id="header">Алгоритмы</header>
-    <div class="container">
-        <div id="linksToAlgorithms">
-            <a class='navLink'href="./A-star/index.html">А*</a>
-            <a class='navLink'href="./Clustering/index.html">Алгоритм кластеризации</a>
-            <a class='navLink'href="./Genetic algorithm/index.html">Генетический алгоритм</a>
-            <a class='navLink'href="./Ant algorithm/index.html">Муравьиный алгоритм</a>
-            <a class='navLink'href="./Genetic algorithm/index.html">Дерево решений</a>
-            <a class='navLink'href="./Neural network/index.html">Нейронная сеть</a>
-        </div>
-        <div id="linkToCreators">
-            <a class='navLink'href="https://vk.com/id457452780">Алексеев Кирилл</a>
-            <a class='navLink'href="https://vk.com/id359313816">Федосеев Павел</a>
-        </div>
+    <header id="header">
+        <p>ПК</p>
+    </header>
+    <div id="links_to_algorithms">
+        <a class="nav_link" href="./A-star/index.html">А*</a>
+        <a class="nav_link" href="./Clustering/index.html">Алгоритм кластеризации</a>
+        <a class="nav_link" href="./Genetic algorithm/index.html">Генетический алгоритм</a>
+        <a class="nav_link" href="./Ant algorithm/index.html">Муравьиный алгоритм</a>
+        <a class="nav_link" href="./Genetic algorithm/index.html">Дерево решений</a>
+        <a class="nav_link" href="./Neural network/index.html">Нейронная сеть</a>
+    </div>
+    <p id="foter_text">Авторы</p>
+    <div id="link_to_creators">
+        <a class="network_link" href="https://vk.com/id457452780">Алексеев Кирилл</a>
+        <a class="network_link" href="https://vk.com/id359313816">Федосеев Павел</a>
     </div>
 </body>
 </html>
