--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Сайтик</title>
+    <title>ПК</title>
 </head>
 <body>
     <header id="header">
         <p>ПК</p>
     </header>
-    <div id="links_to_algorithms">
-        <a class="nav_link" href="./A-star/index.html">А*</a>
-        <a class="nav_link" href="./Clustering/index.html">Алгоритм кластеризации</a>
-        <a class="nav_link" href="./Genetic algorithm/index.html">Генетический алгоритм</a>
-        <a class="nav_link" href="./Ant algorithm/index.html">Муравьиный алгоритм</a>
-        <a class="nav_link" href="./Genetic algorithm/index.html">Дерево решений</a>
-        <a class="nav_link" href="./Neural network/index.html">Нейронная сеть</a>
-    </div>
+    <nav>
+        <div id="links_to_algorithms">
+            <a class="nav_link" href="./A-star/index.html">А*</a>
+            <a class="nav_link" href="./Clustering/index.html">Алгоритм кластеризации</a>
+            <a class="nav_link" href="./Genetic algorithm/index.html">Генетический алгоритм</a>
+            <a class="nav_link" href="./Ant algorithm/index.html">Муравьиный алгоритм</a>
+            <a class="nav_link" href="./Genetic algorithm/index.html">Дерево решений</a>
+            <a class="nav_link" href="./Neural network/index.html">Нейронная сеть</a>
+        </div>
+    </nav>
     <p id="foter_text">Авторы</p>
     <div id="link_to_creators">
         <a class="network_link" href="https://vk.com/id457452780">Алексеев Кирилл</a>
