--- a/A-star/index.html
+++ b/A-star/index.html
@@ -11,26 +11,32 @@
     <script src="Generate labyrinth.js"></script>
 </head>
 <body>
-    <div id = "inputs_data">
-        <label for="input">Введите значение</label>
-        <input id="input" type="number" min="2" max="51">
-        <button id = "createMap">Создать карту</button>
-        <button id = "obstacle">Препятствие</button>
-        <button id = "start">Старт</button>
-        <button id = "finish">Финиш</button>
-        <button id="generateLabyrinth">Построить лабиринт</button>
-        <button id="aStar">Найти путь</button>
-        <button id="createTableMarkup">Очистить карту</button>
-        <button id="clearMapOfPath">Очистить карту от путей</button>
-        <form id = "choice_of_heuristics">
-            <label for="Manhattan">Манхэттенское расстояние</label>
-            <input id="Manhattan" type="radio" name="heuristics" value="0" checked>
-            <label for="Chebyshev">Расстояние Чебышева</label>
-            <input id="Chebyshev" type="radio" name="heuristics" value="1">
-        </form>
-    </div>
+    <header id="header">
+        <div class="dropdown">
+          <a id="home" href="/index.html">ПК</a>
+          <div class="dropdown-content">
+            <a href="/A-star/index.html">А*</a>
+            <a href="/Clustering/index.html">Алгоритм кластеризации</a>
+            <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
+            <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
+            <a href="/Genetic algorithm/index.html">Дерево решений</a>
+            <a href="/Neural network/index.html">Нейронная сеть</a>
+          </div>
+        </div>
+    </header>
+    <main id="main">
+        <button class="nav_link" id = "createMap">Создать карту</button>
+        <input class="nav_link" id="input" type="number" min="2" max="51">
+        <button class="nav_link" id = "obstacle">Препятствие</button>
+        <button class="nav_link" id = "start">Старт</button>
+        <button class="nav_link" id = "finish">Финиш</button>
+        <button class="nav_link" id="generateLabyrinth">Построить лабиринт</button>
+        <button class="nav_link" id="aStar">Найти путь</button>
+        <button class="nav_link" id="createTableMarkup">Очистить карту</button>
+        <button class="nav_link" id="clearMapOfPath">Очистить карту от путей</button>
+    </main>
     <div id = "table">
-        <canvas class = "canvas" width = "800" height = "800" >Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
+        <canvas class = "canvas">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="Map.js"></script>
     </div>
 </body>
