--- a/Genetic algorithm/index.html
+++ b/Genetic algorithm/index.html
@@ -8,12 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = "inputs_data">
-        <button id="geneticAlgorithm">Найти путь</button>
-        <button id="clearMap">Очистить карту</button>
-    </div>
-    <div id = "map">
-        <canvas id = "canvas" width = "800" height = "800">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
+    <header id="header">
+        <div class="dropdown">
+          <a id="home" href="/index.html">ПК</a>
+          <div class="dropdown-content">
+            <a href="/A-star/index.html">А*</a>
+            <a href="/Clustering/index.html">Алгоритм кластеризации</a>
+            <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
+            <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
+            <a href="/Genetic algorithm/index.html">Дерево решений</a>
+            <a href="/Neural network/index.html">Нейронная сеть</a>
+          </div>
+        </div>
+    </header>
+    <main id="main">
+        <button class="nav_link" id="geneticAlgorithm">Найти путь</button>
+        <button class="nav_link" id="clearMap">Очистить карту</button>
+    </main>
+    <div id = "table">
+        <canvas id = "canvas">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="Genetic algorithm.js"></script>
         <script src="functions for canvas.js"></script>
     </div>
