--- a/A-star/index.html
+++ b/A-star/index.html
@@ -19,7 +19,7 @@
             <a href="/Clustering/index.html">Алгоритм кластеризации</a>
             <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
             <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
-            <a href="/Genetic algorithm/index.html">Дерево решений</a>
+            <a href="/Decision tree">Дерево решений</a>
             <a href="/Neural network/index.html">Нейронная сеть</a>
           </div>
         </div>
@@ -36,7 +36,7 @@
         <button class="nav_link" id="clearMapOfPath">Очистить карту от путей</button>
     </main>
     <div id = "table">
-        <canvas class = "canvas">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
+        <canvas class = "canvas" width="800" height="800">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="Map.js"></script>
     </div>
 </body>
