--- a/Genetic algorithm/index.html
+++ b/Genetic algorithm/index.html
@@ -16,7 +16,7 @@
             <a href="/Clustering/index.html">Алгоритм кластеризации</a>
             <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
             <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
-            <a href="/Genetic algorithm/index.html">Дерево решений</a>
+            <a href="/Decision tree">Дерево решений</a>
             <a href="/Neural network/index.html">Нейронная сеть</a>
           </div>
         </div>
@@ -26,7 +26,7 @@
         <button class="nav_link" id="clearMap">Очистить карту</button>
     </main>
     <div id = "table">
-        <canvas id = "canvas">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
+        <canvas id = "canvas" width="800" height="800">Извините, ваш браузер нет поддерживает&lt;canvas&gt; элемент.</canvas>
         <script src="Genetic algorithm.js"></script>
         <script src="functions for canvas.js"></script>
     </div>
