--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="nav_link" href="./Clustering/index.html">Алгоритм кластеризации</a>
             <a class="nav_link" href="./Genetic algorithm/index.html">Генетический алгоритм</a>
             <a class="nav_link" href="./Ant algorithm/index.html">Муравьиный алгоритм</a>
-            <a class="nav_link" href="./Genetic algorithm/index.html">Дерево решений</a>
+            <a class="nav_link" href="./Decision tree">Дерево решений</a>
             <a class="nav_link" href="./Neural network/index.html">Нейронная сеть</a>
         </div>
     </nav>
