--- a/Ant algorithm/index.html
+++ b/Ant algorithm/index.html
@@ -7,11 +7,26 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <div id = "inputs">
-        <button onclick = "antAlgorithm()">Начать алгоритм</button>
-        <button onclick = "clearMap()">Очистить карту</button>
+  <header id="header">
+    <div class="dropdown">
+      <a id="home" href="/index.html">ПК</a>
+      <div class="dropdown-content">
+        <a href="/A-star/index.html">А*</a>
+        <a href="/Clustering/index.html">Алгоритм кластеризации</a>
+        <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
+        <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
+        <a href="/Decision tree">Дерево решений</a>
+        <a href="/Neural network/index.html">Нейронная сеть</a>
+      </div>
     </div>
+  </header>
+  <main id="main">
+      <button class="nav_link" onclick = "antAlgorithm()">Начать алгоритм</button>
+      <button class="nav_link" onclick = "clearMap()">Очистить карту</button>
+  </main>
+  <div id = "table">
     <canvas id="canvas" width="800" height="800"></canvas>
     <script src = "script.js"></script>
+  </div>
 </body>
 </html>
