--- a/Decision tree/index.html
+++ b/Decision tree/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
-    <title>Decision tree</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neural network</title>
+
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <input id = "fileInput" type = "file">
-    <button onclick="getMatrixfromFile()">Построить матрицу</button>
+<body onload="createTable()">
+  <header id="header">
+    <div class="dropdown">
+      <a id="home" href="/index.html">ПК</a>
+      <div class="dropdown-content">
+        <a href="/A-star/index.html">А*</a>
+        <a href="/Clustering/index.html">Алгоритм кластеризации</a>
+        <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
+        <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
+        <a href="/Decision tree">Дерево решений</a>
+        <a href="/Neural network/index.html">Нейронная сеть</a>
+      </div>
+    </div>
+  </header>
+  <main id="main">
+    <p>Не сделан(</p>
+  </main>
 </body>
 </html>
