--- a/Neural network/index.html
+++ b/Neural network/index.html
@@ -18,7 +18,7 @@
         <a href="/Clustering/index.html">Алгоритм кластеризации</a>
         <a href="/Genetic algorithm/index.html">Генетический алгоритм</a>
         <a href="/Ant algorithm/index.html">Муравьиный алгоритм</a>
-        <a href="/Genetic algorithm/index.html">Дерево решений</a>
+        <a href="/Decision tree">Дерево решений</a>
         <a href="/Neural network/index.html">Нейронная сеть</a>
       </div>
     </div>
