--- a/Clustering/index.html
+++ b/Clustering/index.html
@@ -24,7 +24,7 @@
     <div class = "choise">
         <button class = "K-means nav_link">K-means</button>
         <button class = "DBSCAN nav_link">DBSCAN</button>
-        <button class = "иерархия nav_link">Иерархическая кластеризация</button>
+        <button class = "hierarchy nav_link">Иерархическая кластеризация</button>
     </div>
     <div class = "K-meansInputs p">
         <div class="main">
